tests/error/type_not_template.gw
#! [contains] is not template
var <~int~>Object o;
